maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: type mismatch;
 found   : Int
 required: Boolean
  while (!estSurBiscuit() && !porteBiscuit()&&getIndication(getX(),getY()))
                                                           ^